tests/configuration/invalid_environment/invalid_value/configuration/settings_int.py
from selva.configuration import environment as env

env.get_int("INVALID")
